@@ -2,9 +2,9 @@ package ch.unige.events.service;
 
 import ch.unige.events.dto.calendar.CalendarTokenResponse;
 import ch.unige.events.entity.Attendance;
-import ch.unige.events.entity.AttendanceStatus;
 import ch.unige.events.entity.Event;
 import ch.unige.events.entity.EventStatus;
+import ch.unige.events.entity.Favorite;
 import ch.unige.events.entity.User;
 import ch.unige.events.config.AppConfig;
 import ch.unige.events.util.IcsBuilder;
@@ -13,9 +13,11 @@ import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
 import jakarta.ws.rs.NotFoundException;
 
+import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
+import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class CalendarService {
@@ -49,13 +51,29 @@ public class CalendarService {
                 .firstResultOptional()
                 .orElseThrow(() -> new NotFoundException("Calendar token not found"));
 
-        List<Event> events = Attendance.findAllByUser(user.id).stream()
-                .filter(a -> a.status == AttendanceStatus.INTERESTED
-                          || a.status == AttendanceStatus.ATTENDING)
-                .map(a -> Event.<Event>findByIdOptional(a.eventId))
-                .flatMap(Optional::stream)
-                .filter(e -> e.status == EventStatus.PUBLISHED)
-                .toList();
+        // Collect all favorite event IDs
+        List<Long> favoriteIds = Favorite.findAllByUser(user.id).stream()
+                .map(f -> f.eventId)
+                .collect(Collectors.toList());
+
+        // Collect all attending event IDs
+        List<Long> attendingIds = Attendance.findAllByUser(user.id).stream()
+                .map(a -> a.eventId)
+                .collect(Collectors.toList());
+
+        // Combine into a deduplicated set
+        Set<Long> allIds = new HashSet<>();
+        allIds.addAll(favoriteIds);
+        allIds.addAll(attendingIds);
+
+        if (allIds.isEmpty()) {
+            return IcsBuilder.buildIcsContent(List.of(), appConfig.frontendUrl());
+        }
+
+        // Single bulk query for all PUBLISHED events
+        List<Event> events = Event.<Event>find(
+                "id IN ?1 AND status = ?2", allIds, EventStatus.PUBLISHED
+        ).list();
 
         return IcsBuilder.buildIcsContent(events, appConfig.frontendUrl());
     }
